# Rag-System

./: README.md  pyproject.toml
API/: server.py
Crawler/: go.mod
Crawler/cmd/docscrawler/: main.go
Crawler/internal/net/: query.go
Rag/: app.py
RagCore/: document_store.py  pipeline.py  prompt_builder.py  retriever_generator.py
